[gd_scene load_steps=5 format=3 uid="uid://dkbfr6gb2sgd3"]

[ext_resource type="Texture2D" uid="uid://dw0tha6cnys2g" path="res://Assets/nineslice.png" id="1_fmcfc"]
[ext_resource type="Script" uid="uid://q5kuwhem4c8o" path="res://User Interface/ratings.gd" id="1_w4a0u"]
[ext_resource type="FontFile" uid="uid://nugvgdqe6t6c" path="res://Assets/Fonts/Gamey Pixels/Gamey Pixels.ttf" id="2_w4a0u"]
[ext_resource type="Texture2D" uid="uid://cxldkx7613u7b" path="res://Assets/ratings_mockup.png" id="4_ypt50"]

[node name="Ratings" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 116.0
offset_bottom = 72.0
script = ExtResource("1_w4a0u")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_fmcfc")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2

[node name="RatingsLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_w4a0u")
theme_override_font_sizes/font_size = 8
text = "Ratings 0"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("4_ypt50")

[node name="ScoreLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_w4a0u")
theme_override_font_sizes/font_size = 8
text = "Notes hit 0 / 0"
horizontal_alignment = 1

[node name="ComboLabel" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_w4a0u")
theme_override_font_sizes/font_size = 8
text = "Combo 0"
horizontal_alignment = 1
